# MSD

./: .gitignore  Makefile_part1  Network.java  README.md  ompReductions 2.cpp
.github/workflows/: c-cpp.yml
CS6010/Day20/: sfml.md
CS6010/Day20/CMakeSFML/: CMakeCache.txt  CMakeLists.txt
CS6010/lecture1program/lecture1program/: main.cpp
CS6011/Week 1/Day 1/: index.html
CS6011/Week 1/Day3/: wireshark_lab.txt
CS6011/Week3/Day11/: HelloJS.html  index.html  myPageBuilder.js
CS6011/Week3/Day12/: index.html  myPageBuilder.js  styles.css
CS6011/Week3/Day13/: index.html  sort.js
CS6011/Week3/Day14/: calculator.js  index.html
CS6012/A8 - Pacman/Pacman/: cantMazeOutput.txt  megaMazeOutput.txt
CS6012/Week1/Day1/: Lab1.txt
CS6012/Week1/Day2/: lab2.txt
CS6012/Week1/Day3/: lab3.txt
CS6012/Week1/Day4/: .~lock.A3TimingResults.ods#  A3Analysis.txt  A3TimingResultsBetter.ods  A3timingResultsCopy.ods  lab4.txt
CS6012/Week2/Day6/: .~lock.A4Analysis.odt#  .~lock.SortTiming.ods#  .~lock.SortTimingNew.ods#  SortTiming.ods  lab5.txt
CS6012/Week3/Day11/: A6Analysis.odt  A6Data.ods
CS6012/Week3/Day14/: .~lock.lab06.ods#  Lab06.txt
CS6012/Week3/Day15/: HashTableAnalysis.odt
CS6012/Week4/Day18/: d_example.d
Day10/BookAnalyzer/BookAnalyzer/: main.cpp
Day10/PointersAndArrays/PointersAndArrays/: main
Day10/PointersAndArrays/PointersAndArrays.xcodeproj/: project.pbxproj
Day11/NumberConverter/NumberConverter/: main.cpp
Day12/NumberRepresentations/NumberRepresentations/: main.cpp
Day13/BitOperations/BitOperations.xcodeproj/: project.pbxproj
Day20/CMakeSFML/: CMakeLists.txt
Day20/src/: helloSFML.cpp
Spring2026/CS6013/: lab1.c
Spring2026/CS6013/Week9/MallocReplacement/: CMakeLists.txt  HashTable.cpp  HashTable.h  MyMemory.cpp  MyMemory.h
Spring2026/CS6013/Week9/MallocReplacement/src/: HashTable.cpp  HashTable.h  MyMalloc.cpp  MyMalloc.h  MyMemory.cpp  main.cpp
Spring2026/CS6013/Week9/MallocReplacement/tests/: HashTableTest.cpp  MyMallocTest.cpp  OverrideTest.cpp
Spring2026/CS6013/WeekEnd/OpenMPReductions/: CMakeLists.txt  ompReductions  ompReductions.cpp  parallel_sum  parallel_sum.cpp
Spring2026/CS6015/: .~lock.GenTestReport.odt#  GenTestReport.odt  Report_Lab3.pages
Summer2026/CS6016/: Lab 1 - Jon Pulsipher.md  Lab 2 - Jon Pulsipher.md  Lab 3 - Jon Pulsipher.md  Lab 5.md  Lab4.md
Testing/: main
lecture1program/lecture1program/: main.cpp
lecture1program/lecture1program.xcodeproj/: project.pbxproj
scratch/: main.d
(+552 files in other folders)
